src/View/Components/splitModal.css
.modal > div:has(.split-modal[extended]) {
    max-width: 64rem;
}

.split-modal {
    width: 100%;
    height: 100%;

    display: flex;

    overflow-x: scroll;
    overflow-y: hidden;
    scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
}

.split-modal > div {
    width: 100%;
    min-width: calc(100% - 4rem);
    flex: 0;

    scroll-snap-align: center;
}

.split-modal > div,
.split-modal > div > .scroll-area {
    width: 100%;

    display: flex;
    flex-direction: column;

    align-items: stretch;
    justify-content: safe center;
}

.split-modal[navigation] > div > .scroll-area{
    justify-content: start;
}

.split-modal[navigation] > div {
    min-width: 100%;
}

.split-modal .scroll-area {
    flex: 1;
    width: 100%;
    overflow-y: auto;

    padding: var(--content-padding);
}

.split-modal[navigation] > div:nth-child(2) > .flex-row > button {
    transform: translateX(calc(-1 * var(--content-padding)));
}

.split-modal .detail-button-wrapper {
    display: flex;
    justify-content: end;

    border-top: 1px solid var(--border);
    padding: var(--content-padding);
}

.split-modal .detail-button-wrapper button {
    max-width: 100%;
}

.split-modal code {
    width: 100%;
    height: 100%;

    font-size: 0.9rem;
}

@media (min-width: 640px) {
    .split-modal > div {
        flex: 1;
        min-width: unset;
    }

    .split-modal[navigation] > div {
        min-width: unset;
    }

    .split-modal[navigation] > div:first-child {
        flex: 0;
        min-width: 20rem;
    }

    .split-modal:not([navigation]) > div {
        width: 50%;
        min-width: 50%;
    }

    .split-modal .detail-button-wrapper {
        display: none;
    }
}

@media (max-width: 640px) {
    .split-modal[navigation]:not([page-open]) > div:nth-child(2) {
        display: none;
    }

    .split-modal[navigation][page-open] > div:first-child {
        display: none;
    }
}

